[package]
name = "ncylsp"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.17"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
lsp-types = "0.93"
indicatif = "0.17"
notemancy-core = { path = "../notemancy-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_yaml = "0.9.34"
